tests/purs/failing/OverlappingVars.out
Error found:
in module [33mMain[0m
at tests/purs/failing/OverlappingVars.purs:14:8 - 14:20 (line 14, column 8 - line 14, column 20)

  No type class instance was found for
  [33m                                       [0m
  [33m  Main.OverlappingVars (Foo String Int)[0m
  [33m                                       [0m

while applying a function [33mf[0m
  of type [33mOverlappingVars t0 => t0 -> t0[0m
  to argument [33m(Foo "") 0[0m
while inferring the type of [33mf ((Foo "") 0)[0m
in value declaration [33mtest[0m

where [33mt0[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

